src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Communication_Template__c</fullName>
        <label>Communication Template</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Program__r.Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Program__r.Owner:User.FirstName &amp; &quot; &quot; &amp;  Program__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Date__c</fullName>
        <label>Manual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Date__c</fullName>
        <label>Monthly Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Account_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Account Group</label>
        <referenceTo>National_Account_Group__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <label>Program Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <formula>Program__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Local_Action_Req__c</fullName>
        <formula>Program__r.Local_Action_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Local Action Req?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <formula>Program__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Date__c</fullName>
        <label>Weekly Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weekly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weekly</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
</CustomObject>